Front-End development started, pages created. Front-end: 10% , Back-end: 85%.

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -3,7 +3,8 @@
     <a href ="#" routerLink="/" class = "logo">Music Lab</a>
       <nav>
         <ul>
-          <li><a href="#" routerLink= "/">Home</a></li>
+          <li><a href="#" routerLink= "/Home">Home</a></li>
+          <li><a href="#" routerLink= "/LogIn">Log In</a></li>
           <li><a href="#" routerLink= "/Registration">Registration</a></li>
           <li><a href="#" routerLink= "/Music">Music</a></li>
         </ul>
