--- a/Client/src/app/registration/registration.component.html
+++ b/Client/src/app/registration/registration.component.html
@@ -26,7 +26,8 @@
         <input type="email" name = "email" class="form-control middle2" placeholder="Email Address" required autofocus>
         <input type="password" name = "pw" class="form-control bottom" placeholder="Password" required autofocus>
 
-    <button class="btn btn-lg btn-primary btn-block" type="submit" routerLink ='/Home'>Register</button>
+    <p>   </p>
+    <button class="form-control bottom2" type="submit" >Register</button>
 
 <p class="mt-5 mb-3 text-muted">&copy; Salman Janvekar</p>
 </form>
