Front end home page completed, login and registration completed, music page started. Front-End: 25% completed Back-end: 85% completed

--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+
+<h1 class ="text-center">Welcome To the <span class='music'>Music Lab</span> |</h1>
+    <body>
+        <div> 
+            <h3>What we offer</h3>
+            <p>This website allows you to browse through the most popular music today.</p>
+            <h3>What you can do</h3>
+            <p>As a user of the <span class="music">Music Lab&trade;</span> you can upload your own trending songs and have the chance to rate your favourites, posted by you or anyone else.</p>
+            <h3>How To Join</h3>
+            <p>If you are a new user, join us today and head over to the registration page through the link below! If you are a returning user, Welcome Back.</p>
+            </div>
+        <button class="form-control bottom" type="submit" routerLink = '/LogIn' >Register</button>
+    </body>
