--- a/Client/src/app/login/login.component.scss
+++ b/Client/src/app/login/login.component.scss
@@ -48,4 +48,6 @@ body {
         margin-bottom: 10px;
         margin-top: 1px;
         align-items: baseline;
+        margin-right: 5px;
+        margin-left: 30px;
   }
