--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,11 +1,10 @@
 <header>
   <div class ="container">
-    <a href ="#" routerLink="/" class = "logo">Music Lab</a>
+    <a href ="#" routerLink="/Home" class = "logo">Music Lab&trade;</a>
       <nav>
         <ul>
           <li><a href="#" routerLink= "/Home">Home</a></li>
           <li><a href="#" routerLink= "/LogIn">Log In</a></li>
-          <li><a href="#" routerLink= "/Registration">Registration</a></li>
           <li><a href="#" routerLink= "/Music">Music</a></li>
         </ul>
       </nav>
