--- a/Client/src/app/login/login.component.html
+++ b/Client/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <title>Log In</title>
     
     
-    <style>
+    <style >
           .bd-placeholder-img {
             font-size: 1.125rem;
             text-anchor: middle;
@@ -21,12 +21,13 @@
       </head>
       <body class="text-center">
         <form action = "/" class="form-signin" method="POST">
-      <h1 class="h3 mb-3 font-weight-normal">Log In</h1>
+      <h1 class="h3 mb-3 font-weight-normal">Log In | Register</h1>
     
             <input type="email" name = "email" class="form-control top" placeholder="Email Address" required autofocus>
             <input type="password" name = "pw" class="form-control bottom" placeholder="Password" required autofocus>
     <p>   </p>
     <button class="form-control bottom2" type="submit" routerLink ='/Home'>Log In</button>
+    <button class="form-control bottom" type="submit" >Register</button>
     <p class="mt-5 mb-3 text-muted">&copy; Salman Janvekar</p>
     </form>
     </body>
