Connection from front end to back end started, still a lot of bug fixes remain

--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -2,12 +2,16 @@
 <h1 class ="text-center">Welcome To the <span class='music'>Music Lab</span> |</h1>
     <body>
         <div> 
-            <h3>What we offer</h3>
+            <h3>What we offer |</h3>
             <p>This website allows you to browse through the most popular music today.</p>
-            <h3>What you can do</h3>
+            <h3>What you can do |</h3>
             <p>As a user of the <span class="music">Music Lab&trade;</span> you can upload your own trending songs and have the chance to rate your favourites, posted by you or anyone else.</p>
-            <h3>How To Join</h3>
+            <h3>How To Join |</h3>
             <p>If you are a new user, join us today and head over to the registration page through the link below! If you are a returning user, Welcome Back.</p>
             </div>
         <button class="form-control bottom" type="submit" routerLink = '/LogIn' >Register</button>
+        <p></p>
+        <h3>Our Album Of The Week |</h3>
+        <iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="450" style="width:100%;max-width:2200px;overflow:hidden;background:transparent; margin-bottom: 50px; align-content: center;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/trilogy/1440856556?app=music"></iframe>
     </body>
+    
