--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,11 +1,12 @@
 <header>
   <div class ="container">
-    <a href ="#" routerLink="/Home" class = "logo">Music Lab&trade;</a>
+    <a href ="#" routerLink="/Home" class = "logo"><img src="http://icons.iconarchive.com/icons/dtafalonso/yosemite-flat/512/Music-icon.png" style = "width:30px;height:30px;">Music Lab&trade;</a>
       <nav>
         <ul>
           <li><a href="#" routerLink= "/Home">Home</a></li>
           <li><a href="#" routerLink= "/LogIn">Log In</a></li>
-          <li><a href="#" routerLink= "/Music">Music</a></li>
+          <li><a href="#" routerLink= "/Music/music">Music</a></li>
+          <li> <a href="#" routerLink = "/Policies">Policies</a></li>
         </ul>
       </nav>
   </div>
