--- a/Client/src/app/add-song/add-song.component.scss
+++ b/Client/src/app/add-song/add-song.component.scss
@@ -2,9 +2,8 @@ body {
     height: 100%;
   }
   
-  body {
+.body {
     display: -ms-flexbox;
-    display: flex;
     -ms-flex-align: center;
     align-items: center;
     padding-top: 40px;
@@ -12,16 +11,16 @@ body {
     background-color: #ffffff;
   }
   
-  .form-signin {
+  .input {
     width: 100%;
     max-width: 330px;
     padding: 15px;
     margin: auto;
   }
-  .form-signin .checkbox {
+  .input .checkbox {
     font-weight: 400;
   }
-  .form-signin .form-control {
+  .input .form-control {
     position: relative;
     box-sizing: border-box;
     align-items: center;
@@ -29,7 +28,7 @@ body {
     padding: 10px;
     font-size: 15px;
   }
-  .form-signin .form-control:focus {
+  .input .form-control:focus {
     z-index: 2;
   }
   .top {
@@ -48,6 +47,6 @@ body {
         margin-bottom: 10px;
         margin-top: 1px;
         align-items: baseline;
-        margin-right: 10px;
-        margin-left: 60px;
+        margin-right: 80px;
+        margin-left: 20px;
   }
