--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -5,6 +5,7 @@
         <ul>
           <li><a href="#" routerLink= "/Home">Home</a></li>
           <li><a href="#" routerLink= "/LogIn">Log In</a></li>
+          <li><a href="#" routerLink= "/Registration">Registration</a></li>
           <li><a href="#" routerLink= "/Music/music">Music</a></li>
           <li> <a href="#" routerLink = "/Policies">Policies</a></li>
         </ul>
