--- a/Client/src/app/login/login.component.html
+++ b/Client/src/app/login/login.component.html
@@ -20,13 +20,13 @@
         </style>
       </head>
       <body class="text-center">
-      <form  (ngSubmit)='addUser(element.Email, element.Password)' method = "POST" class="form-signin" name = "register">
-      <h1 class="h3 mb-3 font-weight-normal">Log In | Register</h1>
-            <input type="email" name = "Email" class="form-control top" placeholder="Email Address"required autofocus >
-            <input type="password" name = "Password" class="form-control bottom" placeholder="Password" required autofocus>
+      <form class="form-signin" name = "register">
+      <h1 class="h3 mb-3 font-weight-normal">Log In |</h1>
+      <input type="email" id = "Email" name = "Email" class="form-control top" placeholder="Email Address"required autofocus >
+      <input type="password" id = "Password" name = "Password" class="form-control bottom" placeholder="Password" required autofocus>
     <p> </p>
-    <button class="form-control bottom2" type="submit" routerLink ='/Home'>Log In</button>
-    <button class="form-control bottom" type = "button" routerLink ='/Home'>Register</button>
+    <button class="form-control bottom2" type="submit" (click) = 'logInUser()' routerLink ='/Home'>Log In</button>
     <p class="mt-5 mb-3 text-muted">&copy; Salman Janvekar</p>
     </form>
+   
     </body>
