Music page started to get and post all songs on the page, add song functionality complete|| register complete|| login complete|| DMCA policy started

--- a/Client/src/app/music/music.component.html
+++ b/Client/src/app/music/music.component.html
@@ -1,6 +1,13 @@
 <h1>Songs |</h1>
 <button mat-raised-button color="primary" routerLink="/Music/addSong">Add A Song</button>
 <body>
-
-
+<ul>
+    <li *ngFor = "let s of song">
+       {{s.Title}}
+       {{s.Album}}
+       {{s.Year}}
+       {{s.Genre}}
+       {{s.Rating}}
+    </li>
+</ul>
 </body>
