--- a/Client/src/app/music/music.component.html
+++ b/Client/src/app/music/music.component.html
@@ -1,13 +1,25 @@
 <h1>Songs |</h1>
-<button mat-raised-button color="primary" routerLink="/Music/addSong">Add A Song</button>
+<button mat-raised-button color="primary" routerLink="/Music/addSong" id = "addSong">Add A Song</button>
 <body>
 <ul>
     <li *ngFor = "let s of song">
-       {{s.Title}}
-       {{s.Album}}
-       {{s.Year}}
-       {{s.Genre}}
-       {{s.Rating}}
+        <div class = "margin">
+        <div>
+        Title: {{s.Title}}
+        </div>
+        <div>
+        Album: {{s.Album}}
+        </div>
+        <div>
+        Year: {{s.Year}}
+        </div>
+        <div>
+        Genre: {{s.Genre}}
+        </div>
+        <div>
+        Rating: {{s.Rating}}
+        </div>
+    </div>
     </li>
 </ul>
 </body>
