Login bugs fixed on server and client

--- a/Client/src/app/registration/registration.component.html
+++ b/Client/src/app/registration/registration.component.html
@@ -25,7 +25,7 @@
                         <input type="email" id = "Email" name = "Email" class="form-control top" placeholder="Email Address"required autofocus >
                         <input type="password" id = "Password" name = "Password" class="form-control bottom" placeholder="Password" required autofocus>
                         <p> </p>
-                        <button class="form-control bottom2" (click) = 'addUser()' type = "submit">Register</button>
+                        <button class="form-control bottom2" (click) = 'addUser()' type = "submit" routerLink = "/Home">Register</button>
                 <p class="mt-5 mb-3 text-muted">&copy; Salman Janvekar</p>
             </form>
        
