--- a/Client/src/app/add-song/add-song.component.html
+++ b/Client/src/app/add-song/add-song.component.html
@@ -21,6 +21,6 @@
     <br>
     <br>
     <div class = "input">
-    <button type="submit" (click) = 'addSong()' class="input bottom2" routerLink = "/Music/music">Post</button>
+    <button type="submit" (click) = 'addSong()' class="bottom2" routerLink = "/Music/music">Post</button>
     </div>
 </form>
