--- a/Client/src/app/music/music.component.scss
+++ b/Client/src/app/music/music.component.scss
@@ -1,3 +1,24 @@
 .margin{
     margin: 20px;
 }
+
+.color{
+    color: #b64040;
+}
+
+.color2{
+    color: #ebcc6a;
+}
+
+.addasong{
+    background-color: #b64040;
+    border: none;
+    margin-left: 60px;
+    color: white;
+    padding: 10px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+
+}
