--- a/Client/src/app/registration/registration.component.scss
+++ b/Client/src/app/registration/registration.component.scss
@@ -47,7 +47,17 @@ body {
   .bottom2{
     margin-bottom: 10px;
     margin-top: 1px;
+    background-color: #b64040;
+    border: none;
+   
+    color: white;
+    padding: 10px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+
     align-items: baseline;
     margin-right: 10px;
-    margin-left: 60px;
+    margin-left: 40px;
   }
