--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -40,7 +40,7 @@ nav{
         display: flex;
 
         li a{
-            color: #d42c2c;
+            color: #b64040;
             padding: 1em;
             font-weight: 0;
             font-size: 15px;
