--- a/Client/src/app/add-song/add-song.component.scss
+++ b/Client/src/app/add-song/add-song.component.scss
@@ -44,9 +44,19 @@ body {
   }
 
   .bottom2{
-        margin-bottom: 10px;
-        margin-top: 1px;
-        align-items: baseline;
-        margin-right: 80px;
-        margin-left: 20px;
+    margin-bottom: 10px;
+    margin-top: 1px;
+    background-color: #b64040;
+    border: none;
+   
+    color: white;
+    padding: 10px 75px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+
+    align-items: baseline;
+    margin-right: 10px;
+    margin-left: 100px;
   }
