Further Style Fixing and modifying

--- a/Client/src/app/add-review/add-review.component.html
+++ b/Client/src/app/add-review/add-review.component.html
@@ -1,22 +1,18 @@
 <form class="body">
         <div class="input">
-            <input type="Title" class="input" id="Title" placeholder="Title" required autofocus>
+            <input type="Song" class="input" id="Song" placeholder="Song Name" required autofocus>
         </div>
         <br>
         <div class="input">
-            <input type="Artist" class="input" id="Artist" placeholder="Artist" required autofocus>
+            <input type="Username" class="input" id="Username" placeholder="Username" required autofocus>
         </div>
         <br>
         <div class="input">
-            <input type="text" class="input" id="Album" placeholder="Album" required autofocus>
+            <input type="Number" class="input" id="Rating" placeholder="Rating (1 - 5)" required autofocus>
         </div>
         <br>
         <div class="input">
-            <input type="Year" class="input" id="Year" placeholder="Year" required autofocus>
-        </div>
-        <br>
-        <div class="input">
-            <input type="text" class="input" id="Genre" placeholder="Genre" required autofocus>
+            <input type="Review" class="input" id="Review" placeholder="Review" required autofocus>
         </div>
         <br>
         <br>
