--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -9,7 +9,7 @@
             <h3>How To Join |</h3>
             <p>If you are a new user, join us today and head over to the registration page through the link below! If you are a returning user, Welcome Back.</p>
             </div>
-        <button class="form-control bottom" type="submit" routerLink = '/Registration' >Register</button>
+        <button class="bottom" type="submit" routerLink = '/Registration' >Register</button>
         <p></p>
         <h3>Our Album Of The Week |</h3>
         <iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="450" style="width:100%;max-width:2200px;overflow:hidden;background:transparent; margin-bottom: 50px; align-content: center;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/trilogy/1440856556?app=music"></iframe>
