--- a/Client/src/app/music/music.component.html
+++ b/Client/src/app/music/music.component.html
@@ -41,10 +41,8 @@
         Rating:<span class = "color2"> {{s.Rating}}</span> 
         </div>
         <div>
-        <br>
-        <button class = "addareview" routerLink="/Music/addReview" id = "addReview">Add A Review</button>
-        <br>
-        <button class = "addareview" routerLink="/Music/viewReviews" id = "viewRatings">View all Reviews/Ratings</button>
+
+        <button class = "addareview" routerLink="/Music/addReview" id = "addReview">Add A Review/View Reviews</button>
         </div>
     </div>
     </div>
