--- a/Client/src/app/add-review/add-review.component.scss
+++ b/Client/src/app/add-review/add-review.component.scss
@@ -58,5 +58,22 @@ body {
 
     align-items: baseline;
     margin-right: 10px;
-    margin-left: 100px;
+
   }
+
+  .ratings{
+      margin-bottom: 50px;
+  }
+
+  .addareview{
+    background-color: #b64040;
+    border: none;
+    margin-left: 530px;
+    color: white;
+    padding: 10px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+
+}
