some admin functionality added and DMCA and Privacy policy updated

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -7,7 +7,9 @@
           <li><a href="#" routerLink= "/LogIn">Log In</a></li>
           <li><a href="#" routerLink= "/Registration">Registration</a></li>
           <li><a href="#" routerLink= "/Music/music">Music</a></li>
-          <li> <a href="#" routerLink = "/Policies">Policies</a></li>
+          <li> <a href="#" routerLink = "/Policies">Privacy Policy</a></li>
+          <li> <a href="#" routerLink = "/AdminHome">Admin Homepage</a></li>
+          <li> <a href='#' routerLink = "/DMCA">DMCA Policy</a></li>
         </ul>
       </nav>
   </div>
